# mansi-translator

./: .gitignore  README.md  pyproject.toml  tech_task_by_orgs.DOCX
backend/: main.py
backend/app/: config.py  exception_handler.py  log.ini  main.py  schema.py  test_main.py  utils.py
backend/app/db/: .gitignore  db_utils.py
client/: front_design.html  package-lock.json  package.json
client/public/: index.html
client/src/http/: axios.js  feedbackAPI.js  translationAPI.js
client/src/routes/: AppRouter.js
client/src/sections/: Loading.jsx
client/src/sections/Translator/: ImproveModal.jsx  ImproveModal.module.css  Translator.jsx  (+4 more)
data/: align_sentences.ipynb  clear_dataset.ipynb  clear_dictionary.csv  make_new_datasets.ipynb  parse_dict.ipynb  parse_rus4all.ipynb  символы.xlsx
data/additional_data/: rus4all.csv
data/cleared_v2/: cleared_v2_test_005.csv  cleared_v2_test_01.csv  cleared_v2_val_005.csv  cleared_v2_val_01.csv
data/cleared_v3/: README.md
data/cleared_v3.1/: README.md
data/cleared_v3.1/small_orig_preproc/: cleared_v3_val_005.csv
data/cleared_v3/big_macrons_changed/: cleared_v3_test_005.csv
data/cleared_v3/small_macrons_changed/: cleared_v3_val_005.csv
data/cleared_v3/small_orig_preproc/: cleared_v3_test_005.csv
models/scripts/: dataset.py  predict_model.py  test_model.py  train.py  train_model.py  train_tokenizer.py
research/: Train_LaBSE.ipynb  [example]nllb-russian-tyvan-finetune-tutorial-colab.ipynb  db_connect_example.ipynb  form_negative_pairs.ipynb  lesha_baseline_nllb-russian-tyvan-finetune-tutorial-colab.ipynb  nmt.ipynb
