[tool.poetry]
name = "mansi-translator"
version = "0.1.0"
description = ""
authors = ["PEREVODCHIKI"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.0"
transformers = "^4.44.2"
numpy = "<2.0.0"
pytorch-lightning = "^2.3.3"
tensorboard = "^2.17.0"
typer = "^0.12.5"
sentencepiece = "^0.2.0"
datasets = "^2.21.0"
sacremoses = "^0.1.1"
sacrebleu = "^2.4.3"
ipykernel = "^6.29.5"
protobuf = "^5.28.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
